# todo-full-stack-web-application

./: .gitignore  BETTER-AUTH-SETUP.md  CORS-SETUP-GUIDE.md  DEPLOYMENT-CHECKLIST.md  IMPLEMENTATION-SUMMARY.md  QUICK-START.md  README.md  RENDER-DEPLOYMENT-GUIDE.md  SETUP-GUIDE.md  pyproject.toml
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_01_29_2051-bf8ec1b3afed_initial_migration_with_users_and_tasks_.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/routers/: __init__.py  auth.py  tasks.py
backend/app/schemas/: __init__.py  task.py  user.py
backend/app/services/: __init__.py  auth.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_tasks.py
frontend/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts  tmp_rovodev_setup_better_auth.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: ThemeToggle.tsx
frontend/components/tasks/: TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/contexts/: ThemeContext.tsx
frontend/hooks/: useTasks.ts
